--- a/compose.yaml
+++ b/compose.yaml
@@ -15,3 +15,17 @@ services:
       nofile:
         soft: 262144
         hard: 262144
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: unless-stopped
+    user: "${UID:-1000}"  
+    links:
+      - clickhouse
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - ./grafana:/var/lib/grafana
