--- a/compose.yaml
+++ b/compose.yaml
@@ -16,8 +16,7 @@ services:
         soft: 262144
         hard: 262144
   gohole:
-    build: .
-    container_name: gohole
+    image: specialfish9/gohole:latest
     links:
       - clickhouse
     ports:
