--- a/backend/config/gohole.conf
+++ b/backend/config/gohole.conf
@@ -1,7 +1,7 @@
 upstream=1.1.1.1:53
 dns_address=:53
 http_address=:8080
-db_address=localhost:9000
+db_address=192.168.0.3:9109
 db_user=gohole
 db_password=password
 db_name=default
