--- a/backend/config/gohole.conf
+++ b/backend/config/gohole.conf
@@ -1,5 +1,5 @@
 upstream=1.1.1.1:53
-dns_address=:53
+dns_address=:8053
 http_address=:8080
 db_address=192.168.0.3:9109
 db_user=gohole
@@ -8,3 +8,4 @@ db_name=default
 blocklist_file=block.txt
 log_level=debug
 serve_frontend=true
+local_blocklist=localblock.txt
