--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -3,27 +3,39 @@ name: Build Docker Image
 env:
   DOCKER_IMAGE: gohole
   DOCKER_USER: specialfish9
-  DOCKER_USERNAME: specialfish9
-  DOCKER_PWD: ${{ secrets.DOCKER_PWD }}
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-    
+    branches: ["master"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
-    - name: docker login
-      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PWD
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PWD }}
 
-    - name: Build and push Docker image
-      run: docker build --push -t ${{ env.DOCKER_USER }}/${{ env.DOCKER_IMAGE }}:latest -t ${{ env.DOCKER_USER }}/${{ env.DOCKER_IMAGE }}:${{ steps.date.outputs.date }} .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ${{ env.DOCKER_USER }}/${{ env.DOCKER_IMAGE }}:latest
+            ${{ env.DOCKER_USER }}/${{ env.DOCKER_IMAGE }}:${{ steps.date.outputs.date }}
+
